Added Utility Classes and better formmatting

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li class="logo">Header Logo</li>
           <li><a href="#">Link 1</a></li>
           <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
+          <li class="last-list-child"><a href="#">Link 3</a></li>
         </ul>
       </nav>
       <div class="sum-info">
