Added better placeholder text

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
       </nav>
       <div class="sum-info">
         <div class="left-container">
-          <h1 class="title">awesome website</h1>
-          <p class="subtitle">awesomeee</p>
+          <h1 class="title">Awesome website</h1>
+          <p class="subtitle">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus nihil repudiandae maiores beatae.
+          </p>
           <button class="signup-btn normal-signup">Sign Up</button>
         </div>
         <div class="right-container">
