Better Placehodler text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="content">
-      <h1>Information.</h1>
+      <h1 class="content-title">Information.</h1>
 
       <div class="flex-wrapper">
         <div class="img-container">
@@ -41,7 +41,7 @@
             alt="rabbit image"
             class="content-img"
           />
-          <p class="subtext"></p>
+          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
         <div class="img-container">
           <img
@@ -49,7 +49,7 @@
             alt="rabbit image"
             class="content-img"
           />
-          <p class="subtext"></p>
+          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
         <div class="img-container">
           <img
@@ -57,7 +57,7 @@
             alt="rabbit image"
             class="content-img"
           />
-          <p class="subtext"></p>
+          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
         <div class="img-container">
           <img
@@ -65,7 +65,7 @@
             alt="rabbit image"
             class="content-img"
           />
-          <p class="subtext"></p>
+          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
       </div>
     </div>
