Decreased placeholder text

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
       <p class="quote-body">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, ab eius
         delectus commodi sapiente aut aliquam voluptate nam id? Numquam,
-        perferendis. Deleniti quisquam saepe quas aliquid! Similique cupiditate
-        consequatur nam!
+        perferendis.
       </p>
       <p class="quote-by">-Lorem</p>
     </div>
