Changed placeholder text
At navigation menu, Logo Text
At Hero section, h1 from "Awesome website" to "Teaching Rabbits, how to parkour!"

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div class="header">
       <nav class="nav-bar">
         <ul>
-          <li class="logo">Header Logo</li>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li class="last-list-child"><a href="#">Link 3</a></li>
+          <li class="logo fancy">Rabbit Parkour Academy</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li class="last-list-child"><a href="#">Blog</a></li>
         </ul>
       </nav>
       <div class="sum-info">
         <div class="left-container">
-          <h1 class="title">Awesome website</h1>
+          <h1 class="title cursive-font">Teaching Rabbits, how to parkour!</h1>
           <p class="subtitle">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Necessitatibus nihil repudiandae maiores beatae.
@@ -26,7 +26,7 @@
           <button class="signup-btn normal-signup">Sign Up</button>
         </div>
         <div class="right-container">
-          <img class="header-img" src="./images/grey-rabbit.jpg" />
+          <img class="header-img" src="./images/grey-rabbit.jpg">
         </div>
       </div>
     </div>
