Replaced lorem ipsum descriptions with detailed real descrptions

--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
         <div class="left-container">
           <h1 class="title cursive-font">Teaching Rabbits, how to parkour!</h1>
           <p class="subtitle">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus nihil repudiandae maiores beatae.
+            The Best Rabbit Parkour Academy to date, training rabbits to become
+            martial art experts so that they can destroy the cradle of human
+            civilization and take over. We help them do that
           </p>
           <button class="signup-btn normal-signup">Sign Up</button>
         </div>
         <div class="right-container">
-          <img class="header-img" src="./images/grey-rabbit.jpg">
+          <img class="header-img" src="./images/grey-rabbit.jpg" />
         </div>
       </div>
     </div>
 
     <div class="content">
-      <h1 class="content-title">Information.</h1>
+      <h1 class="content-title">Information about our team:</h1>
 
       <div class="flex-wrapper">
         <div class="img-container">
@@ -41,7 +42,10 @@
             alt="rabbit image"
             class="content-img"
           />
-          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p class="subtext">
+            This is Daisy, she is very chill and tries to act nice to humans.
+            But deep in her thoughts, she too wants a rabbit takeover.
+          </p>
         </div>
         <div class="img-container">
           <img
@@ -49,7 +53,11 @@
             alt="rabbit image"
             class="content-img"
           />
-          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p class="subtext">
+            This is Phat Boi, his day-to-day work is to destroy humans. He plays
+            checkers with them as he is an absolute gamer with checkers and bets
+            them to shift their job to this academy.
+          </p>
         </div>
         <div class="img-container">
           <img
@@ -57,7 +65,10 @@
             alt="rabbit image"
             class="content-img"
           />
-          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p class="subtext">
+            Phattier is an ambitious and determined rabbit, always striving to
+            improve and become the best at what he does.
+          </p>
         </div>
         <div class="img-container">
           <img
@@ -65,16 +76,19 @@
             alt="rabbit image"
             class="content-img"
           />
-          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p class="subtext">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </p>
         </div>
       </div>
     </div>
 
     <div class="quote">
       <p class="quote-body">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, ab eius
-        delectus commodi sapiente aut aliquam voluptate nam id? Numquam,
-        perferendis.
+        Frank is dedicated to helping other rabbits learn the techniques and
+        skills needed to become skilled parkour practitioners. He is driven and
+        determined, always striving to improve his own abilities and help his
+        fellow rabbits succeed.
       </p>
       <p class="quote-by">-Lorem</p>
     </div>
