Finishing touches, replaced placeholder texts

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             class="content-img"
           />
           <p class="subtext">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Frank is dedicated to helping other rabbits learn the techniques and
+        skills needed to become skilled parkour practitioners.
           </p>
         </div>
       </div>
@@ -85,18 +86,16 @@
 
     <div class="quote">
       <p class="quote-body">
-        Frank is dedicated to helping other rabbits learn the techniques and
-        skills needed to become skilled parkour practitioners. He is driven and
-        determined, always striving to improve his own abilities and help his
-        fellow rabbits succeed.
+        we are rabbit, we are parkour, we take over human.
+        yes.
       </p>
-      <p class="quote-by">-Lorem</p>
+      <p class="quote-by cursive-font">-coco</p>
     </div>
 
     <div class="sign-up-ad">
       <div class="blue-wrapper">
         <div class="ad-left">
-          <h4 class="ad-title">bjfhvhughti jhurhgurhguhe</h4>
+          <h4 class="ad-title">JOIN US!</h4>
           <p>Sign me up!</p>
         </div>
         <div class="ad-right">
@@ -106,7 +105,7 @@
     </div>
 
     <footer class="footer">
-      <p>Copyright The Odin Project 1989</p>
+      <p class="fancy">Copyright The Odin Project 1989</p>
     </footer>
   </body>
 </html>
